--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,8 +37,8 @@ dependencies:
   cupertino_icons: ^1.0.2
   provider: ^6.0.5
   http: any
-  video_player: ^2.6.1
-  chewie: ^1.5.0
+  youtube_player_flutter: ^8.1.2
+  path_provider: ^2.0.15
 
 dev_dependencies:
   flutter_test:
